--- a/recipe.yml
+++ b/recipe.yml
@@ -57,23 +57,24 @@ rpm:
     # if you ever download or compile any custom software on your machine.
     - libadwaita
     # ----- SURFACE SPECIFIC ADDITIONS -----
-    - libwacom-surface # Already included in fedora 
+    - libwacom-surface
+	  - libwacom-data-surface
     - surface-control
     - surface-dtx-daemon
-    # Example:
-    # - tilix
   # These RPMs will be removed from the system image. This step happens during
   # image build, BEFORE installing custom RPMs (from the "rpm.install" category).
   remove:
     # Remove the native firefox (from Fedora) in favor of the Flatpak.
     - firefox
     - firefox-langpacks
+    - libwacom
+    - libwacom-data
 # Configuration for the "first boot" experience, which is available after login.
 firstboot:
   # Whether to embed "yafti" into the OS image and configure it to autostart,
   # which is the preferred uBlue "first boot" GUI. Set this to "false" if you've
   # decided to use a different solution instead.
-  yafti: true
+  yafti: false
   # These Flatpaks will be suggested for install after user login, via the yafti
   # "first boot" GUI. Everything below will be merged into the "yafti.yml" config
   # on build, in a category named "Custom". If you prefer, you can instead remove
